--- a/index.html
+++ b/index.html
@@ -1,43 +1,52 @@
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>schoolmax</title>
-</head>
-<body>
-  <script>
-    function setData(data){
-           let x = JSON.stringify(data,null,2 );
-          document.getElementById("test").innerHTML=x;
-    }
-    function getVal(){
-      const name = document.getElementById("name").value;
-      const pass = document.getElementById("pass").value;
-      const payload = {name,pass}
-      console.log(payload)
-      const options = {
-        method: "POST",
-        body: JSON.stringify({ payload}),
-        headers: { "Content-type": "application/json"}
-        }
-      fetch("https://school-max.herokuapp.com/api", options).then(res =>{
-          return res.json()
-      }).then(data=>{
-        setData(data)
-        console.log(data)
-      })
-    }
-  </script>
-  <div>
-    My api<br/>
-    <label htmlFor="name">user-name:</label><br/>
-    <input type="text" id="name" name="name" placeholder="Enter username"></input><br/>
-    <label htmlFor="pass">password:</label><br/>
-    <input type="password" id="pass" name="pass" placeholder="Enter password"></input>
-    <br/>
-    <button onClick = getVal()> fetch api</button>
-    <h1 id="test"></h1>
-</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+    </style>
+    <link rel="stylesheet" href="style.css" />
+    <script>
+      function getapi() {
+        document.getElementById('go').innerText = 'LOADING..';
+        const name = document.getElementById('name').value;
+        const pass = document.getElementById('pass').value;
+        const payload = { name, pass };
+        console.log(payload);
+        const options = {
+          method: 'POST',
+          body: JSON.stringify({ payload }),
+          headers: { 'Content-type': 'application/json' },
+        };
+        fetch('https://school-max.herokuapp.com/api', options)
+          .then((res) => {
+            return res.json();
+            console.log(res.json());
+          })
+          .then((data) => {
+            localStorage.setItem('data', JSON.stringify(data));
+            console.log(data);
+            //window.location.assign('./nex.html?' + data);
+            console.log(localStorage);
+            window.location.href = './nex.html';
+          });
+      }
+    </script>
+    <title>Document</title>
+  </head>
+  <body id="back">
+    <div class="logo">
+      <img src="./images/app_logo.png" />
+      <div class="app_name">
+        <h1>schoolmax+</h1>
+      </div>
+      <div class="sign">
+        <input id="name" placeholder="enter user-name" />
+        <input id="pass" type="password" placeholder="enter password" />
+      </div>
+      <div class="submit">
+        <button id="go" class="go" onclick="getapi()">GO</button>
+      </div>
+    </div>
+  </body>
 </html>
